--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "pinia": "^2.1.6",
+    "primeflex": "^3.3.1",
+    "primevue": "^3.42.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
@@ -20,11 +22,13 @@
     "@playwright/test": "^1.38.0",
     "@rushstack/eslint-patch": "^1.3.3",
     "@vitejs/plugin-vue": "^4.3.4",
+    "@vue-leaflet/vue-leaflet": "^0.10.1",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/test-utils": "^2.4.1",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^22.1.0",
+    "leaflet": "^1.9.4",
     "prettier": "^3.0.3",
     "vite": "^4.4.9",
     "vitest": "^0.34.4"
