--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "ol": "^8.2.0",
+    "ol-contextmenu": "^5.3.0",
+    "ol-ext": "^4.0.13",
     "pinia": "^2.1.6",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.42.0",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vue3-openlayers": "^4.0.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.38.0",
