--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,13 +12,19 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
-      - name: Deploying application to Amazon S3
-        uses: lewandy/vue-s3-deployer@main
+          
+      - name: Install dependencies
+        run: npm install
+      
+      - name: Build
+        run: npm run build
+    
+      - uses: jakejarvis/s3-sync-action@master
         with:
+          args: --acl public-read --follow-symlinks --delete
+        env:
+          AWS_BUCKET_NAME: data.neotomadb.org
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-          AWS_BUCKET_NAME: data.neotomadb.org
-          APP_SOURCE_CODE: ./
-          BUILD_COMMAND: "npm run build"
+          SOURCE_DIR: 'dist'
