--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "chart.js": "^4.4.2",
+    "chart.js": "^3.7.0",
+    "chartjs-plugin-zoom": "^2.0.1",
     "ol": "^8.2.0",
     "ol-contextmenu": "^5.3.0",
     "ol-ext": "^4.0.13",
+    "parcel": "^2.12.0",
     "pinia": "^2.1.6",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.42.0",
     "vue": "^3.3.4",
+    "vue-chart-3": "^3.1.8",
     "vue-router": "^4.2.4",
     "vue3-openlayers": "^4.0.1"
   },
@@ -29,6 +32,7 @@
     "@rushstack/eslint-patch": "^1.3.3",
     "@vitejs/plugin-vue": "^4.3.4",
     "@vue-leaflet/vue-leaflet": "^0.10.1",
+    "@vue/babel-preset-jsx": "^1.4.0",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/test-utils": "^2.4.1",
     "eslint": "^8.49.0",
