--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "chart.js": "^3.7.0",
+    "chartjs-plugin-draggable": "^0.1.6",
     "chartjs-plugin-zoom": "^2.0.1",
     "ol": "^8.2.0",
     "ol-contextmenu": "^5.3.0",
