--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "vite",
+    "apidev": "VITE_APP_API_ENDPOINT=http://localhost:3001 vite",
     "build": "vite build",
     "preview": "vite preview",
     "test:unit": "vitest",
