--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,12 +19,12 @@ jobs:
       - name: Build
         run: npm run build
     
-      - uses: jakejarvis/s3-sync-action@master
+      - name: Deploying application to Amazon S3
+        uses: lewandy/vue-s3-deployer@main
         with:
-          args: --acl public-read --follow-symlinks --delete
-        env:
-          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-          SOURCE_DIR: 'dist'
+          AWS_BUCKET_NAME: ${{ secrets.AWS_BUCKET_NAME }}
+          APP_SOURCE_CODE: ./
+          BUILD_COMMAND: "npm run build"
