--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,18 +13,31 @@ jobs:
     steps:
       - uses: actions/checkout@v2
           
-      - name: Install dependencies
-        run: npm install
-      
-      - name: Build
-        run: npm run build
-    
+      - name: Get yarn cache directory path 🛠
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+        
+      - name: Cache node_modules 📦
+        uses: actions/cache@v2
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
+      - name: Install dependencies 👨🏻‍💻
+        run: yarn --frozen-lockfile
+        
+      - name: Build dependencies 🛠
+        run: yarn build
+
       - name: Deploying application to Amazon S3
-        uses: lewandy/vue-s3-deployer@main
+        uses: dvelasquez/deploy-s3-action@main
         with:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
           AWS_BUCKET_NAME: ${{ secrets.AWS_BUCKET_NAME }}
-          APP_SOURCE_CODE: ./
-          BUILD_COMMAND: "npm run build"
+          BUCKET_PATH: "/pr/${{github.event.number}}"
+          DIST_LOCATION_CODE: ./dist
