--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "@primevue/themes": "^4.0.4",
     "chart.js": "^4.4.3",
     "chartjs-plugin-zoom": "^2.0.1",
+    "downloadjs": "^1.4.7",
+    "ol": "^10.0.0",
+    "ol-contextmenu": "^5.5.0",
+    "ol-ext": "^4.0.22",
     "pinia": "^2.2.0",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.0.4",
     "vue": "^3.4.31",
     "vue-router": "4",
-    "vue3-openlayers": "^11.0.0"
+    "vue3-openlayers": "^11.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
