--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.0.4",
+    "chart.js": "^3.9.1",
     "chartjs-plugin-zoom": "^2.0.1",
     "downloadjs": "^1.4.7",
     "ol": "^10.0.0",
