--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "primevue": "^4.2.4",
     "vue": "^3.3.4",
     "vue-chart-3": "^3.1.8",
+    "vue-cookies": "^1.8.4",
     "vue-router": "^4.2.4",
     "vue3-openlayers": "^4.0.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
+    "prettier": "^3.4.1",
     "vite": "^5.3.4"
   }
 }
