--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite serve --mode=development"
   },
   "dependencies": {
     "@primevue/themes": "^4.0.4",
