--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite serve --mode=development"
   },
   "dependencies": {
-    "@primevue/themes": "^4.0.4",
+    "@primevue/themes": "^4.3.7",
     "@ssthouse/vue3-tree-chart": "^0.2.6",
     "chart.js": "^3.9.1",
     "chartjs-plugin-zoom": "^2.0.1",
@@ -28,9 +28,15 @@
     "vue3-openlayers": "^4.0.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.35.0",
     "@vitejs/plugin-vue": "^5.0.5",
+    "eslint": "^9.35.0",
+    "eslint-plugin-vue": "^10.4.0",
+    "globals": "^16.4.0",
+    "inquirer": "^12.9.4",
     "less": "^4.2.2",
     "prettier": "^3.4.1",
-    "vite": "^5.3.4"
+    "vite": "^5.3.4",
+    "vue-eslint-parser": "^10.2.0"
   }
 }
