--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue": "^3.3.4",
     "vue-chart-3": "^3.1.8",
     "vue-cookies": "^1.8.6",
+    "vue-json-pretty": "^2.5.0",
     "vue-router": "^4.2.4",
     "vue3-openlayers": "^4.0.1"
   },
