Updated some decoration to get actions working
Changes to the workflow, a text error in `dbSummary`, added a production view of the app in package.json.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,10 @@ jobs:
         run: |
           if [[ ${{ github.ref }} == 'refs/heads/main' ]]; then
             echo "ENVIRONMENT=prod" >> $GITHUB_ENV
-            echo "AWS_BUCKET_NAME=$(secrets.AWS_BUCKET_NAME)" >> $GITHUB_OUTPUT
+            echo "AWS_BUCKET_NAME=$(${secrets.AWS_BUCKET_NAME})" >> $GITHUB_ENV
           else
             echo "ENVIRONMENT=dev" >> $GITHUB_ENV
-            echo "AWS_BUCKET_NAME=$(secrets.AWS_DEV_BUCKET_NAME)" >> $GITHUB_OUTPUT
+            echo "AWS_BUCKET_NAME=$(${secrets.AWS_DEV_BUCKET_NAME})" >> $GITHUB_ENV
           fi
           
       - name: Get yarn cache directory path
