--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite serve --mode=development"
+    "preview": "vite serve --mode=development",
+    "prod": "vite serve --mode=production"
   },
   "dependencies": {
     "@primevue/themes": "^4.3.7",
