--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,11 +3,9 @@ name: Deploy Landing Pages to S3
 on:
   push:
     branches: [main, dev]
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
 
@@ -50,3 +48,21 @@ jobs:
           AWS_BUCKET_NAME: ${{ steps.bucket-name.outputs.AWS_BUCKET_NAME }}
           BUCKET_PATH: "/${{github.event.number}}"
           DIST_LOCATION_CODE: ./dist
+      
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
+      - uses: badsyntax/github-action-aws-cloudfront@master
+        name: Invalidate CloudFront Cache
+        id: invalidate-cloudfront-cache
+        with:
+          distribution-id: ${{ secrets.CFDistributionId }}
+          aws-region: 'us-east-1'
+          origin-prefix: 'root'
+          include-origin-prefix: true
+          invalidate-paths: '/*'
+          default-root-object: 'index.html'
