--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,10 +14,10 @@ jobs:
         run: |
           if [[ ${{ github.ref }} == 'refs/heads/main' ]]; then
             echo "ENVIRONMENT=prod" >> $GITHUB_ENV
-            echo "AWS_BUCKET_NAME=$(${secrets.AWS_BUCKET_NAME})" >> $GITHUB_ENV
+            echo "{AWS_BUCKET_NAME}=${secrets.AWS_BUCKET_NAME}" >> "$GITHUB_ENV"
           else
             echo "ENVIRONMENT=dev" >> $GITHUB_ENV
-            echo "AWS_BUCKET_NAME=$(${secrets.AWS_DEV_BUCKET_NAME})" >> $GITHUB_ENV
+            echo "{AWS_BUCKET_NAME}=${secrets.AWS_DEV_BUCKET_NAME}" >> $GITHUB_ENV
           fi
           
       - name: Get yarn cache directory path
@@ -45,7 +45,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-          AWS_BUCKET_NAME: ${{ env.AWS_BUCKET_NAME }}
+          AWS_BUCKET_NAME: $AWS_BUCKET_NAME
           BUCKET_PATH: "/${{github.event.number}}"
           DIST_LOCATION_CODE: ./dist
       
