--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,11 +15,11 @@ jobs:
           if [[ ${{ github.ref }} == 'refs/heads/main' ]]; then
             echo "ENVIRONMENT=prod" >> $GITHUB_ENV
             echo "AWS_BUCKET_NAME=${{secrets.AWS_BUCKET_NAME}}" >> "$GITHUB_ENV"
-            echo "CFDDISTRIBUTIONID=${{secrets.CFDDISTRIBUTIONID}}" >> "$GITHUB_ENV"
+            echo "CFDISTRIBUTIONID=${{secrets.CFDISTRIBUTIONID}}" >> "$GITHUB_ENV"
           else
             echo "ENVIRONMENT=dev" >> $GITHUB_ENV
             echo "AWS_BUCKET_NAME=${{secrets.AWS_DEV_BUCKET_NAME}}" >> $GITHUB_ENV
-            echo "CFDDISTRIBUTIONID=${{secrets.CFDDISTRIBUTIONID_DEV}}" >> "$GITHUB_ENV"
+            echo "CFDISTRIBUTIONID=${{secrets.CFDISTRIBUTIONID_DEV}}" >> "$GITHUB_ENV"
           fi
           
       - name: Get yarn cache directory path
@@ -62,7 +62,7 @@ jobs:
         name: Invalidate CloudFront Cache
         id: invalidate-cloudfront-cache
         with:
-          distribution-id: ${{ env.CFDDISTRIBUTIONID }}
+          distribution-id: ${{ env.CFDISTRIBUTIONID }}
           aws-region: 'us-east-1'
           origin-prefix: 'root'
           include-origin-prefix: true
